@@ -17,6 +17,7 @@
 package com.facebook.buck.apple.project_generator;
 
 import static com.facebook.buck.apple.project_generator.ProjectGeneratorTestUtils.assertTargetExistsAndReturnTarget;
+import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.CoreMatchers.instanceOf;
@@ -67,22 +68,22 @@ import com.facebook.buck.apple.xcode.xcodeproj.PBXVariantGroup;
 import com.facebook.buck.apple.xcode.xcodeproj.ProductType;
 import com.facebook.buck.apple.xcode.xcodeproj.SourceTreePath;
 import com.facebook.buck.apple.xcode.xcodeproj.XCBuildConfiguration;
-import com.facebook.buck.cli.BuckConfig;
-import com.facebook.buck.cli.FakeBuckConfig;
-import com.facebook.buck.cxx.CxxBuckConfig;
+import com.facebook.buck.config.BuckConfig;
+import com.facebook.buck.config.FakeBuckConfig;
 import com.facebook.buck.cxx.CxxDescriptionEnhancer;
 import com.facebook.buck.cxx.CxxLibraryBuilder;
-import com.facebook.buck.cxx.CxxPlatformUtils;
 import com.facebook.buck.cxx.CxxPrecompiledHeaderBuilder;
 import com.facebook.buck.cxx.CxxSource;
-import com.facebook.buck.cxx.platform.CxxPlatform;
+import com.facebook.buck.cxx.toolchain.CxxBuckConfig;
+import com.facebook.buck.cxx.toolchain.CxxPlatform;
+import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
 import com.facebook.buck.event.BuckEventBus;
 import com.facebook.buck.event.BuckEventBusForTests;
 import com.facebook.buck.graph.AbstractBottomUpTraversal;
 import com.facebook.buck.halide.HalideBuckConfig;
 import com.facebook.buck.halide.HalideLibraryBuilder;
 import com.facebook.buck.halide.HalideLibraryDescription;
-import com.facebook.buck.io.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.js.IosReactNativeLibraryBuilder;
 import com.facebook.buck.js.ReactNativeBuckConfig;
 import com.facebook.buck.model.BuildTarget;
@@ -90,14 +91,13 @@ import com.facebook.buck.model.BuildTargetFactory;
 import com.facebook.buck.model.Either;
 import com.facebook.buck.model.Flavor;
 import com.facebook.buck.model.InternalFlavor;
-import com.facebook.buck.parser.NoSuchBuildTargetException;
 import com.facebook.buck.rules.BuildRuleResolver;
 import com.facebook.buck.rules.Cell;
 import com.facebook.buck.rules.DefaultBuildTargetSourcePath;
 import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
 import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.PathSourcePath;
+import com.facebook.buck.rules.SingleThreadedBuildRuleResolver;
 import com.facebook.buck.rules.SourcePath;
 import com.facebook.buck.rules.SourcePathResolver;
 import com.facebook.buck.rules.SourcePathRuleFinder;
@@ -179,7 +179,7 @@ public class ProjectGeneratorTest {
   @Before
   public void setUp() throws InterruptedException, IOException {
     assumeTrue(Platform.detect() == Platform.MACOS || Platform.detect() == Platform.LINUX);
-    clock = new SettableFakeClock(0, 0);
+    clock = SettableFakeClock.DO_NOT_CARE;
     fakeProjectFilesystem = new FakeProjectFilesystem(clock);
     projectCell = (new TestCellBuilder()).setFilesystem(fakeProjectFilesystem).build();
     projectFilesystem = projectCell.getFilesystem();
@@ -222,14 +222,14 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -257,21 +257,20 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     TargetNode<?, ?> genruleNode =
         GenruleBuilder.newGenruleBuilder(genruleTarget)
             .setSrcs(
-                ImmutableList.of(
-                    new FakeSourcePath("foo/foo.json"), new FakeSourcePath("bar.json")))
+                ImmutableList.of(FakeSourcePath.of("foo/foo.json"), FakeSourcePath.of("bar.json")))
             .setOut("out")
             .build();
 
@@ -314,17 +313,16 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .setExtraXcodeFiles(
-                ImmutableList.of(
-                    new FakeSourcePath("foo/foo.json"), new FakeSourcePath("bar.json")))
+                ImmutableList.of(FakeSourcePath.of("foo/foo.json"), FakeSourcePath.of("bar.json")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -357,16 +355,16 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .setExtraXcodeSources(
-                ImmutableList.of(new FakeSourcePath("foo/foo.m"), new FakeSourcePath("bar.m")))
+                ImmutableList.of(FakeSourcePath.of("foo/foo.m"), FakeSourcePath.of("bar.m")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -443,7 +441,7 @@ public class ProjectGeneratorTest {
   }
 
   @Test
-  public void testModularFrameworkHeaderMapInclusionAsDependency() throws IOException {
+  public void testModularLibraryInterfaceMapInclusionAsDependency() throws IOException {
     BuildTarget frameworkBundleTarget =
         BuildTargetFactory.newInstance(rootPath, "//foo", "framework");
     BuildTarget frameworkLibTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -457,9 +455,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setConfigs(ImmutableSortedMap.of(configName, ImmutableMap.of()))
             .setModular(true)
             .build();
@@ -467,7 +465,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> frameworkBundleNode =
         AppleBundleBuilder.createBuilder(frameworkBundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(frameworkLibTarget)
             .build();
 
@@ -481,13 +479,14 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> appBundleNode =
         AppleBundleBuilder.createBuilder(appBundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(appBinaryTarget)
             .build();
 
     ProjectGenerator projectGenerator =
         createProjectGeneratorForCombinedProject(
             ImmutableSet.of(frameworkLibNode, frameworkBundleNode, appBinaryNode, appBundleNode),
+            ImmutableSet.of(frameworkBundleNode, appBinaryNode, appBundleNode),
             ImmutableSet.of());
 
     projectGenerator.createXcodeProjects();
@@ -496,14 +495,14 @@ public class ProjectGeneratorTest {
     assertNotNull(project);
 
     List<Path> headerSymlinkTrees = projectGenerator.getGeneratedHeaderSymlinkTrees();
-    assertThat(headerSymlinkTrees, hasSize(8));
+    assertThat(headerSymlinkTrees, hasSize(6));
 
     assertTrue(headerSymlinkTrees.contains(Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub")));
     assertThatHeaderMapWithoutSymLinksIsEmpty(Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub"));
   }
 
   @Test
-  public void testModularFrameworkHeaderMapInclusionInTargetItself() throws IOException {
+  public void testModularLibraryInterfaceInclusionInTargetItself() throws IOException {
     BuildTarget libTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
 
     TargetNode<?, ?> libNode =
@@ -511,9 +510,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
             .setModular(true)
             .build();
@@ -530,7 +529,9 @@ public class ProjectGeneratorTest {
     assertThat(headerSymlinkTrees, hasSize(2));
 
     assertThat(headerSymlinkTrees.get(0).toString(), is(equalTo("buck-out/gen/_p/CwkbTNOBmb-pub")));
-    assertThatHeaderMapWithoutSymLinksIsEmpty(Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub"));
+    assertThatHeaderSymlinkTreeContains(
+        Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub"),
+        ImmutableMap.of("lib/bar.h", "HeaderGroup1/bar.h"));
   }
 
   @Test
@@ -545,9 +546,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setConfigs(ImmutableSortedMap.of(configName, ImmutableMap.of()))
             .setModular(true)
             .build();
@@ -555,18 +556,20 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> frameworkNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libTarget)
             .build();
 
     ProjectGenerator projectGenerator =
         createProjectGeneratorForCombinedProject(
-            ImmutableSet.of(libNode, frameworkNode), ImmutableSet.of());
+            ImmutableSet.of(libNode, frameworkNode),
+            ImmutableSet.of(frameworkNode),
+            ImmutableSet.of());
 
     projectGenerator.createXcodeProjects();
 
     PBXProject project = projectGenerator.getGeneratedProject();
-    PBXTarget libPBXTarget = assertTargetExistsAndReturnTarget(project, "//foo:lib");
+    PBXTarget libPBXTarget = assertTargetExistsAndReturnTarget(project, "//foo:framework");
 
     ImmutableMap<String, String> buildSettings =
         getBuildSettings(bundleTarget, libPBXTarget, configName);
@@ -599,17 +602,17 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
             .setExportedHeaders(
-                ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/" + exportedHeaderName)))
+                ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/" + exportedHeaderName)))
             .setModular(true)
             .build();
 
     TargetNode<?, ?> frameworkNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libTarget)
             .build();
 
@@ -644,9 +647,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -721,13 +724,15 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedMap.of(
-                    "any/name.h", new FakeSourcePath("HeaderGroup1/foo.h"),
-                    "different/name.h", new FakeSourcePath("HeaderGroup2/baz.h"),
-                    "one/more/name.h", new DefaultBuildTargetSourcePath(privateGeneratedTarget)))
+                    "any/name.h", FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    "different/name.h", FakeSourcePath.of("HeaderGroup2/baz.h"),
+                    "one/more/name.h", DefaultBuildTargetSourcePath.of(privateGeneratedTarget)))
             .setExportedHeaders(
                 ImmutableSortedMap.of(
-                    "yet/another/name.h", new FakeSourcePath("HeaderGroup1/bar.h"),
-                    "and/one/more.h", new DefaultBuildTargetSourcePath(publicGeneratedTarget)))
+                    "yet/another/name.h",
+                    FakeSourcePath.of("HeaderGroup1/bar.h"),
+                    "and/one/more.h",
+                    DefaultBuildTargetSourcePath.of(publicGeneratedTarget)))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -799,10 +804,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .build();
 
@@ -834,10 +839,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .setXcodePublicHeadersSymlinks(false)
             .setXcodePrivateHeadersSymlinks(false)
@@ -873,10 +878,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .setHeaderNamespace("name/space")
             .build();
@@ -919,13 +924,15 @@ public class ProjectGeneratorTest {
         new CxxLibraryBuilder(buildTarget)
             .setExportedHeaders(
                 ImmutableSortedMap.of(
-                    "yet/another/name.h", new FakeSourcePath("foo/dir1/bar.h"),
-                    "and/one/more.h", new DefaultBuildTargetSourcePath(publicGeneratedTarget)))
+                    "yet/another/name.h",
+                    FakeSourcePath.of("foo/dir1/bar.h"),
+                    "and/one/more.h",
+                    DefaultBuildTargetSourcePath.of(publicGeneratedTarget)))
             .setHeaders(
                 ImmutableSortedMap.of(
-                    "any/name.h", new FakeSourcePath("foo/dir1/foo.h"),
-                    "different/name.h", new FakeSourcePath("foo/dir2/baz.h"),
-                    "one/more/name.h", new DefaultBuildTargetSourcePath(privateGeneratedTarget)))
+                    "any/name.h", FakeSourcePath.of("foo/dir1/foo.h"),
+                    "different/name.h", FakeSourcePath.of("foo/dir2/baz.h"),
+                    "one/more/name.h", DefaultBuildTargetSourcePath.of(privateGeneratedTarget)))
             .setSrcs(ImmutableSortedSet.of())
             .build();
 
@@ -970,13 +977,15 @@ public class ProjectGeneratorTest {
         new CxxLibraryBuilder(buildTarget)
             .setExportedHeaders(
                 ImmutableSortedMap.of(
-                    "yet/another/name.h", new FakeSourcePath("foo/dir1/bar.h"),
-                    "and/one/more.h", new DefaultBuildTargetSourcePath(publicGeneratedTarget)))
+                    "yet/another/name.h",
+                    FakeSourcePath.of("foo/dir1/bar.h"),
+                    "and/one/more.h",
+                    DefaultBuildTargetSourcePath.of(publicGeneratedTarget)))
             .setHeaders(
                 ImmutableSortedMap.of(
-                    "any/name.h", new FakeSourcePath("foo/dir1/foo.h"),
-                    "different/name.h", new FakeSourcePath("foo/dir2/baz.h"),
-                    "one/more/name.h", new DefaultBuildTargetSourcePath(privateGeneratedTarget)))
+                    "any/name.h", FakeSourcePath.of("foo/dir1/foo.h"),
+                    "different/name.h", FakeSourcePath.of("foo/dir2/baz.h"),
+                    "one/more/name.h", DefaultBuildTargetSourcePath.of(privateGeneratedTarget)))
             .setSrcs(ImmutableSortedSet.of())
             .setHeaderNamespace("name/space")
             .build();
@@ -1013,7 +1022,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("key.h", new FakeSourcePath("value.h")))
+            .setHeaders(ImmutableSortedMap.of("key.h", FakeSourcePath.of("value.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1031,7 +1040,7 @@ public class ProjectGeneratorTest {
     node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("new-key.h", new FakeSourcePath("value.h")))
+            .setHeaders(ImmutableSortedMap.of("new-key.h", FakeSourcePath.of("value.h")))
             .build();
 
     projectGenerator = createProjectGeneratorForCombinedProject(ImmutableSet.of(node));
@@ -1055,7 +1064,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("key.h", new FakeSourcePath("value.h")))
+            .setHeaders(ImmutableSortedMap.of("key.h", FakeSourcePath.of("value.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1073,7 +1082,7 @@ public class ProjectGeneratorTest {
     node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("key.h", new FakeSourcePath("new-value.h")))
+            .setHeaders(ImmutableSortedMap.of("key.h", FakeSourcePath.of("new-value.h")))
             .build();
 
     projectGenerator = createProjectGeneratorForCombinedProject(ImmutableSet.of(node));
@@ -1097,15 +1106,15 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.h"), ImmutableList.of("public")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.h"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.h"), ImmutableList.of("public")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.h"))))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -1146,22 +1155,22 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.h"), ImmutableList.of("public")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.h"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.h"), ImmutableList.of("public")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.h"))))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(bundleTarget))
             .build();
 
@@ -1203,22 +1212,22 @@ public class ProjectGeneratorTest {
         AppleBinaryBuilder.createBuilder(binaryTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.h"), ImmutableList.of("public")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.h"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.h"), ImmutableList.of("public")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.h"))))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(binaryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(bundleTarget))
             .build();
 
@@ -1254,10 +1263,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .build();
 
@@ -1320,27 +1329,25 @@ public class ProjectGeneratorTest {
     }
   }
 
-  private void assertThatHeaderMapWithoutSymLinksIsEmpty(Path root) throws IOException {
+  private HeaderMap getHeaderMapInDir(Path root) throws IOException {
     // Read the tree's header map.
     byte[] headerMapBytes;
     try (InputStream headerMapInputStream =
         projectFilesystem.newFileInputStream(root.resolve(".hmap"))) {
       headerMapBytes = ByteStreams.toByteArray(headerMapInputStream);
     }
-    HeaderMap headerMap = HeaderMap.deserialize(headerMapBytes);
+    return HeaderMap.deserialize(headerMapBytes);
+  }
+
+  private void assertThatHeaderMapWithoutSymLinksIsEmpty(Path root) throws IOException {
+    HeaderMap headerMap = getHeaderMapInDir(root);
     assertNotNull(headerMap);
     assertEquals(headerMap.getNumEntries(), 0);
   }
 
   private void assertThatHeaderMapWithoutSymLinksContains(
       Path root, ImmutableMap<String, String> content) throws IOException {
-    // Read the tree's header map.
-    byte[] headerMapBytes;
-    try (InputStream headerMapInputStream =
-        projectFilesystem.newFileInputStream(root.resolve(".hmap"))) {
-      headerMapBytes = ByteStreams.toByteArray(headerMapInputStream);
-    }
-    HeaderMap headerMap = HeaderMap.deserialize(headerMapBytes);
+    HeaderMap headerMap = getHeaderMapInDir(root);
     assertNotNull(headerMap);
     assertThat(headerMap.getNumEntries(), equalTo(content.size()));
     for (Map.Entry<String, String> entry : content.entrySet()) {
@@ -1359,10 +1366,10 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.m"), ImmutableList.of("-foo")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.m"))))
-            .setExtraXcodeSources(ImmutableList.of(new FakeSourcePath("libsomething.a")))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.m"), ImmutableList.of("-foo")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.m"))))
+            .setExtraXcodeSources(ImmutableList.of(FakeSourcePath.of("libsomething.a")))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1400,8 +1407,8 @@ public class ProjectGeneratorTest {
         new HalideLibraryBuilder(compilerTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("main.cpp")),
-                    SourceWithFlags.of(new FakeSourcePath("filter.cpp"))))
+                    SourceWithFlags.of(FakeSourcePath.of("main.cpp")),
+                    SourceWithFlags.of(FakeSourcePath.of("filter.cpp"))))
             .build();
 
     BuildTarget libTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -1442,9 +1449,9 @@ public class ProjectGeneratorTest {
         new CxxLibraryBuilder(buildTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.cpp"), ImmutableList.of("-foo")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.cpp"))))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.cpp"), ImmutableList.of("-foo")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.cpp"))))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1473,7 +1480,7 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setHeaderPathPrefix(Optional.of("MyHeaderPathPrefix"))
-            .setPrefixHeader(Optional.of(new FakeSourcePath("Foo/Foo-Prefix.pch")))
+            .setPrefixHeader(Optional.of(FakeSourcePath.of("Foo/Foo-Prefix.pch")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1498,14 +1505,14 @@ public class ProjectGeneratorTest {
     BuildTarget pchTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "pch");
     TargetNode<?, ?> pchNode =
         CxxPrecompiledHeaderBuilder.createBuilder(pchTarget)
-            .setSrc(new FakeSourcePath("Foo/Foo-Prefix.pch"))
+            .setSrc(FakeSourcePath.of("Foo/Foo-Prefix.pch"))
             .build();
 
     BuildTarget libraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setPrecompiledHeader(Optional.of(new DefaultBuildTargetSourcePath(pchTarget)))
+            .setPrecompiledHeader(Optional.of(DefaultBuildTargetSourcePath.of(pchTarget)))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1609,6 +1616,8 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setCompilerFlags(ImmutableList.of("-fhello"))
             .setPreprocessorFlags(ImmutableList.of("-fworld"))
+            .setSwiftCompilerFlags(
+                StringWithMacrosUtils.fromStrings(ImmutableList.of("-fhello-swift")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1623,6 +1632,7 @@ public class ProjectGeneratorTest {
     assertEquals(
         "$(inherited) -Wno-deprecated -Wno-conversion -fhello -fworld",
         settings.get("OTHER_CFLAGS"));
+    assertEquals("$(inherited) -fhello-swift", settings.get("OTHER_SWIFT_FLAGS"));
   }
 
   @Test
@@ -1736,13 +1746,13 @@ public class ProjectGeneratorTest {
     BuildTarget exportFileTarget =
         BuildTargetFactory.newInstance(rootPath, "//foo", "libExported.a");
     TargetNode<?, ?> exportFileNode =
-        new ExportFileBuilder(exportFileTarget).setSrc(new FakeSourcePath("libExported.a")).build();
+        new ExportFileBuilder(exportFileTarget).setSrc(FakeSourcePath.of("libExported.a")).build();
 
     BuildTarget transitiveDepOfGenruleTarget =
         BuildTargetFactory.newInstance(rootPath, "//foo", "libExported2.a");
     TargetNode<?, ?> transitiveDepOfGenruleNode =
         new ExportFileBuilder(transitiveDepOfGenruleTarget)
-            .setSrc(new FakeSourcePath("libExported2.a"))
+            .setSrc(FakeSourcePath.of("libExported2.a"))
             .build();
 
     BuildTarget genruleTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "genrulelib");
@@ -2131,7 +2141,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2145,8 +2155,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2176,8 +2186,7 @@ public class ProjectGeneratorTest {
         settings.get("HEADER_SEARCH_PATHS"));
     assertEquals(null, settings.get("USER_HEADER_SEARCH_PATHS"));
     assertEquals("$(inherited) $BUILT_PRODUCTS_DIR", settings.get("LIBRARY_SEARCH_PATHS"));
-    assertEquals(
-        "$(inherited) $BUILT_PRODUCTS_DIR $SDKROOT", settings.get("FRAMEWORK_SEARCH_PATHS"));
+    assertEquals("$(inherited) $BUILT_PRODUCTS_DIR", settings.get("FRAMEWORK_SEARCH_PATHS"));
   }
 
   @Test
@@ -2195,7 +2204,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2209,8 +2218,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2240,7 +2249,7 @@ public class ProjectGeneratorTest {
         settings.get("HEADER_SEARCH_PATHS"));
     assertEquals("user_headers", settings.get("USER_HEADER_SEARCH_PATHS"));
     assertEquals("libraries $BUILT_PRODUCTS_DIR", settings.get("LIBRARY_SEARCH_PATHS"));
-    assertEquals("frameworks $BUILT_PRODUCTS_DIR $SDKROOT", settings.get("FRAMEWORK_SEARCH_PATHS"));
+    assertEquals("frameworks $BUILT_PRODUCTS_DIR", settings.get("FRAMEWORK_SEARCH_PATHS"));
   }
 
   @Test
@@ -2252,7 +2261,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryDepNode =
         AppleLibraryBuilder.createBuilder(libraryDepTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2266,7 +2275,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2281,8 +2290,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2313,8 +2322,7 @@ public class ProjectGeneratorTest {
         settings.get("HEADER_SEARCH_PATHS"));
     assertEquals(null, settings.get("USER_HEADER_SEARCH_PATHS"));
     assertEquals("$(inherited) " + "$BUILT_PRODUCTS_DIR", settings.get("LIBRARY_SEARCH_PATHS"));
-    assertEquals(
-        "$(inherited) " + "$BUILT_PRODUCTS_DIR $SDKROOT", settings.get("FRAMEWORK_SEARCH_PATHS"));
+    assertEquals("$(inherited) " + "$BUILT_PRODUCTS_DIR", settings.get("FRAMEWORK_SEARCH_PATHS"));
   }
 
   @Test
@@ -2334,8 +2342,8 @@ public class ProjectGeneratorTest {
     BuildTarget testTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "xctest");
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -2370,7 +2378,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2384,8 +2392,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -2422,7 +2430,7 @@ public class ProjectGeneratorTest {
     BuildTarget testTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "xctest");
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -2442,7 +2450,7 @@ public class ProjectGeneratorTest {
     BuildTarget depTarget = BuildTargetFactory.newInstance(rootPath, "//dep", "dep");
     TargetNode<?, ?> depNode =
         AppleLibraryBuilder.createBuilder(depTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("e.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("e.m"))))
             .build();
 
     BuildTarget binaryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "binary");
@@ -2451,9 +2459,9 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.m"), ImmutableList.of("-foo"))))
-            .setExtraXcodeSources(ImmutableList.of(new FakeSourcePath("libsomething.a")))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.m"), ImmutableList.of("-foo"))))
+            .setExtraXcodeSources(ImmutableList.of(FakeSourcePath.of("libsomething.a")))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2505,7 +2513,7 @@ public class ProjectGeneratorTest {
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "resource");
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setFiles(ImmutableSet.of(new FakeSourcePath("bar.png")))
+            .setFiles(ImmutableSet.of(FakeSourcePath.of("bar.png")))
             .setDirs(ImmutableSet.of())
             .build();
 
@@ -2521,7 +2529,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(scriptTarget))
             .build();
@@ -2558,7 +2566,7 @@ public class ProjectGeneratorTest {
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "resource");
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setFiles(ImmutableSet.of(new FakeSourcePath("bar.png")))
+            .setFiles(ImmutableSet.of(FakeSourcePath.of("bar.png")))
             .setDirs(ImmutableSet.of())
             .build();
 
@@ -2574,7 +2582,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(scriptTarget))
             .build();
@@ -2618,7 +2626,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> rnLibraryNode =
         IosReactNativeLibraryBuilder.builder(rnLibraryTarget, buckConfig)
             .setBundleName("Apps/Foo/FooBundle.js")
-            .setEntryPath(new PathSourcePath(filesystem, Paths.get("js/FooApp.js")))
+            .setEntryPath(FakeSourcePath.of(filesystem, "js/FooApp.js"))
             .build();
 
     BuildTarget sharedLibraryTarget =
@@ -2631,7 +2639,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(rnLibraryTarget))
             .build();
@@ -2667,7 +2675,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleBundleBuilder.createBuilder(buildTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .build();
 
@@ -2696,7 +2704,7 @@ public class ProjectGeneratorTest {
         AppleResourceBuilder.createBuilder(resourceTarget)
             .setFiles(ImmutableSet.of())
             .setDirs(ImmutableSet.of())
-            .setVariants(ImmutableSet.of(new FakeSourcePath("Base.lproj/Bar.storyboard")))
+            .setVariants(ImmutableSet.of(FakeSourcePath.of("Base.lproj/Bar.storyboard")))
             .build();
     BuildTarget fooLibraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> fooLibraryNode =
@@ -2707,7 +2715,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(fooLibraryTarget)
             .setDeps(ImmutableSortedSet.of(resourceTarget))
             .build();
@@ -2749,7 +2757,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleBundleBuilder.createBuilder(buildTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setXcodeProductType(Optional.of("com.facebook.buck.niftyProductType"))
             .build();
@@ -2786,7 +2794,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleBundleBuilder.createBuilder(buildTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .build();
 
@@ -2832,7 +2840,7 @@ public class ProjectGeneratorTest {
     BuildTarget modelTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "model");
     TargetNode<?, ?> modelNode =
         CoreDataModelBuilder.createBuilder(modelTarget)
-            .setPath(new FakeSourcePath("foo.xcdatamodel").getRelativePath())
+            .setPath(FakeSourcePath.of("foo.xcdatamodel").getRelativePath())
             .build();
     testRuleAddsReference(modelTarget, modelNode, "foo.xcdatamodel");
   }
@@ -2842,7 +2850,7 @@ public class ProjectGeneratorTest {
     BuildTarget target = BuildTargetFactory.newInstance(rootPath, "//foo", "scenekitasset");
     TargetNode<?, ?> node =
         SceneKitAssetsBuilder.createBuilder(target)
-            .setPath(new FakeSourcePath("foo.scnassets").getRelativePath())
+            .setPath(FakeSourcePath.of("foo.scnassets").getRelativePath())
             .build();
     testRuleAddsReference(target, node, "foo.scnassets");
   }
@@ -2854,14 +2862,14 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .setInfoPlistSubstitutions(ImmutableMap.of("CODE_SIGN_ENTITLEMENTS", "foo.plist"))
             .build();
 
@@ -2893,7 +2901,7 @@ public class ProjectGeneratorTest {
         AppleBundleBuilder.createBuilder(watchAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
             .setXcodeProductType(Optional.of("com.apple.product-type.application.watchapp2"))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(watchAppBinaryTarget)
             .build();
 
@@ -2906,7 +2914,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .setDeps(ImmutableSortedSet.of(watchAppTarget))
             .build();
@@ -2940,9 +2948,9 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.m"), ImmutableList.of("-foo")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.m"))))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.m"), ImmutableList.of("-foo")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.m"))))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -2995,7 +3003,7 @@ public class ProjectGeneratorTest {
             rootPath, "//dep", "shared", CxxDescriptionEnhancer.SHARED_FLAVOR);
     TargetNode<?, ?> dependentSharedLibraryNode =
         AppleLibraryBuilder.createBuilder(dependentSharedLibraryTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("empty.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("empty.m"))))
             .setDeps(ImmutableSortedSet.of(dependentStaticLibraryTarget))
             .build();
 
@@ -3011,7 +3019,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3041,7 +3049,7 @@ public class ProjectGeneratorTest {
             rootPath, "//dep", "shared", CxxDescriptionEnhancer.SHARED_FLAVOR);
     TargetNode<?, ?> dependentSharedLibraryNode =
         AppleLibraryBuilder.createBuilder(dependentSharedLibraryTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("e.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("e.m"))))
             .setDeps(ImmutableSortedSet.of(dependentStaticLibraryTarget))
             .build();
 
@@ -3050,7 +3058,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> dependentFrameworkNode =
         AppleBundleBuilder.createBuilder(dependentFrameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(dependentSharedLibraryTarget)
             .build();
 
@@ -3066,7 +3074,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3100,7 +3108,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> dependentStaticFrameworkNode =
         AppleBundleBuilder.createBuilder(dependentStaticFrameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(dependentStaticLibraryTarget)
             .build();
 
@@ -3117,7 +3125,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> dependentFrameworkNode =
         AppleBundleBuilder.createBuilder(dependentFrameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(dependentSharedLibraryTarget)
             .build();
 
@@ -3126,7 +3134,7 @@ public class ProjectGeneratorTest {
             rootPath, "//foo", "library", CxxDescriptionEnhancer.SHARED_FLAVOR);
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("e.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("e.m"))))
             .setDeps(ImmutableSortedSet.of(dependentFrameworkTarget))
             .build();
 
@@ -3134,7 +3142,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3169,7 +3177,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3188,8 +3196,8 @@ public class ProjectGeneratorTest {
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "res");
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setFiles(ImmutableSet.of(new FakeSourcePath("bar.png")))
-            .setDirs(ImmutableSet.of(new FakeSourcePath("foodir")))
+            .setFiles(ImmutableSet.of(FakeSourcePath.of("bar.png")))
+            .setDirs(ImmutableSet.of(FakeSourcePath.of("foodir")))
             .build();
 
     BuildTarget libraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -3209,7 +3217,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(bundleLibraryTarget)
             .build();
 
@@ -3229,7 +3237,7 @@ public class ProjectGeneratorTest {
         BuildTargetFactory.newInstance(rootPath, "//foo", "asset_catalog");
     TargetNode<?, ?> assetCatalogNode =
         AppleAssetCatalogBuilder.createBuilder(assetCatalogTarget)
-            .setDirs(ImmutableSortedSet.of(new FakeSourcePath("AssetCatalog.xcassets")))
+            .setDirs(ImmutableSortedSet.of(FakeSourcePath.of("AssetCatalog.xcassets")))
             .build();
 
     BuildTarget libraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -3249,7 +3257,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(bundleLibraryTarget)
             .build();
 
@@ -3440,7 +3448,7 @@ public class ProjectGeneratorTest {
   public void nonexistentResourceDirectoryShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(), ImmutableSet.of(new FakeSourcePath("nonexistent-directory")));
+            ImmutableSet.of(), ImmutableSet.of(FakeSourcePath.of("nonexistent-directory")));
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -3454,7 +3462,7 @@ public class ProjectGeneratorTest {
   public void nonexistentResourceFileShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(new FakeSourcePath("nonexistent-file.png")), ImmutableSet.of());
+            ImmutableSet.of(FakeSourcePath.of("nonexistent-file.png")), ImmutableSet.of());
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -3468,7 +3476,7 @@ public class ProjectGeneratorTest {
   public void usingFileAsResourceDirectoryShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(), ImmutableSet.of(new FakeSourcePath("bar.png")));
+            ImmutableSet.of(), ImmutableSet.of(FakeSourcePath.of("bar.png")));
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage("bar.png specified in the dirs parameter of //foo:res is not a directory");
@@ -3481,7 +3489,7 @@ public class ProjectGeneratorTest {
   public void usingDirectoryAsResourceFileShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(new FakeSourcePath("foodir")), ImmutableSet.of());
+            ImmutableSet.of(FakeSourcePath.of("foodir")), ImmutableSet.of());
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -3494,7 +3502,7 @@ public class ProjectGeneratorTest {
   @Test
   public void usingBuildTargetSourcePathInResourceDirsOrFilesDoesNotThrow() throws IOException {
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//some:rule");
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(buildTarget);
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(buildTarget);
     TargetNode<?, ?> generatingTarget = new ExportFileBuilder(buildTarget).build();
 
     ImmutableSet<TargetNode<?, ?>> nodes =
@@ -3524,17 +3532,17 @@ public class ProjectGeneratorTest {
 
     TargetNode<ExportFileDescriptionArg, ?> source1 =
         new ExportFileBuilder(source1Target)
-            .setSrc(new PathSourcePath(projectFilesystem, Paths.get("Vendor/sources/source1")))
+            .setSrc(FakeSourcePath.of(projectFilesystem, "Vendor/sources/source1"))
             .build();
 
     TargetNode<ExportFileDescriptionArg, ?> source2 =
         new ExportFileBuilder(source2Target)
-            .setSrc(new PathSourcePath(projectFilesystem, Paths.get("Vendor/source2")))
+            .setSrc(FakeSourcePath.of(projectFilesystem, "Vendor/source2"))
             .build();
 
     TargetNode<ExportFileDescriptionArg, ?> source2Ref =
         new ExportFileBuilder(source2RefTarget)
-            .setSrc(new DefaultBuildTargetSourcePath(source2Target))
+            .setSrc(DefaultBuildTargetSourcePath.of(source2Target))
             .build();
 
     TargetNode<ExportFileDescriptionArg, ?> source3 = new ExportFileBuilder(source3Target).build();
@@ -3546,10 +3554,10 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(source1Target)),
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(source2RefTarget)),
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(source3Target))))
-            .setPrefixHeader(Optional.of(new DefaultBuildTargetSourcePath(headerTarget)))
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(source1Target)),
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(source2RefTarget)),
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(source3Target))))
+            .setPrefixHeader(Optional.of(DefaultBuildTargetSourcePath.of(headerTarget)))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -3583,8 +3591,9 @@ public class ProjectGeneratorTest {
     BuildTarget hostAppTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "HostApp");
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
+            .setProductName(Optional.of("TestHostApp"))
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3592,7 +3601,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .build();
 
@@ -3609,7 +3618,7 @@ public class ProjectGeneratorTest {
 
     ImmutableMap<String, String> settings = getBuildSettings(testTarget, testPBXTarget, "Debug");
     // Check starts with as the remainder depends on the bundle style at build time.
-    assertTrue(settings.get("BUNDLE_LOADER").startsWith("$BUILT_PRODUCTS_DIR/./HostApp.app/"));
+    assertTrue(settings.get("BUNDLE_LOADER").startsWith("$BUILT_PRODUCTS_DIR/./TestHostApp.app/"));
     assertEquals("$(BUNDLE_LOADER)", settings.get("TEST_HOST"));
   }
 
@@ -3619,19 +3628,19 @@ public class ProjectGeneratorTest {
     BuildTarget hostOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "HostOnly");
     TargetNode<?, ?> hostOnlyLibNode =
         AppleLibraryBuilder.createBuilder(hostOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("HostOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("HostOnly.m"))))
             .build();
 
     BuildTarget sharedLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "Shared");
     TargetNode<?, ?> sharedLibNode =
         AppleLibraryBuilder.createBuilder(sharedLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Shared.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Shared.m"))))
             .build();
 
     BuildTarget testOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "TestOnly");
     TargetNode<?, ?> testOnlyLibNode =
         AppleLibraryBuilder.createBuilder(testOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("TestOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("TestOnly.m"))))
             .build();
 
     // host app
@@ -3646,7 +3655,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3655,7 +3664,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .setDeps(ImmutableSortedSet.of(sharedLibTarget, testOnlyLibTarget))
             .build();
@@ -3703,19 +3712,19 @@ public class ProjectGeneratorTest {
     BuildTarget hostOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "HostOnly");
     TargetNode<?, ?> hostOnlyLibNode =
         AppleLibraryBuilder.createBuilder(hostOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("HostOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("HostOnly.m"))))
             .build();
 
     BuildTarget sharedLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "Shared");
     TargetNode<?, ?> sharedLibNode =
         AppleLibraryBuilder.createBuilder(sharedLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Shared.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Shared.m"))))
             .build();
 
     BuildTarget testOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "TestOnly");
     TargetNode<?, ?> testOnlyLibNode =
         AppleLibraryBuilder.createBuilder(testOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("TestOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("TestOnly.m"))))
             .build();
 
     // host app
@@ -3730,7 +3739,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3740,7 +3749,7 @@ public class ProjectGeneratorTest {
         AppleTestBuilder.createBuilder(testTarget)
             .isUiTest(true)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .setDeps(ImmutableSortedSet.of(sharedLibTarget, testOnlyLibTarget))
             .build();
@@ -3795,7 +3804,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3803,7 +3812,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .isUiTest(true)
             .build();
@@ -3836,7 +3845,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3844,7 +3853,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .build();
 
@@ -3876,10 +3885,10 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo1.m")),
-                    SourceWithFlags.of(new FakeSourcePath("foo2.mm")),
-                    SourceWithFlags.of(new FakeSourcePath("foo3.c")),
-                    SourceWithFlags.of(new FakeSourcePath("foo4.cc"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo1.m")),
+                    SourceWithFlags.of(FakeSourcePath.of("foo2.mm")),
+                    SourceWithFlags.of(FakeSourcePath.of("foo3.c")),
+                    SourceWithFlags.of(FakeSourcePath.of("foo4.cc"))))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -3914,7 +3923,7 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.mm"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.mm"))))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -3957,12 +3966,12 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
     TargetNode<?, ?> assetCatalogNode =
         AppleAssetCatalogBuilder.createBuilder(assetCatalogTarget)
-            .setDirs(ImmutableSortedSet.of(new FakeSourcePath("AssetCatalog.xcassets")))
+            .setDirs(ImmutableSortedSet.of(FakeSourcePath.of("AssetCatalog.xcassets")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -4009,7 +4018,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
             .setDirs(ImmutableSet.of())
-            .setFiles(ImmutableSet.of(new DefaultBuildTargetSourcePath(fileTarget)))
+            .setFiles(ImmutableSet.of(DefaultBuildTargetSourcePath.of(fileTarget)))
             .build();
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
@@ -4040,7 +4049,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> directoryNode = new ExportFileBuilder(directoryTarget).build();
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setDirs(ImmutableSet.of(new DefaultBuildTargetSourcePath(directoryTarget)))
+            .setDirs(ImmutableSet.of(DefaultBuildTargetSourcePath.of(directoryTarget)))
             .setFiles(ImmutableSet.of())
             .build();
     TargetNode<?, ?> libraryNode =
@@ -4074,7 +4083,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> directoryNode = new ExportFileBuilder(directoryTarget).build();
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setDirs(ImmutableSet.of(new DefaultBuildTargetSourcePath(directoryTarget)))
+            .setDirs(ImmutableSet.of(DefaultBuildTargetSourcePath.of(directoryTarget)))
             .setFiles(ImmutableSet.of())
             .build();
     TargetNode<?, ?> libraryNode =
@@ -4107,15 +4116,15 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .build();
 
     BuildTarget testTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "xctest");
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -4156,7 +4165,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework2Node =
         AppleBundleBuilder.createBuilder(framework2Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework2BinaryTarget)
             .build();
 
@@ -4175,7 +4184,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework1Node =
         AppleBundleBuilder.createBuilder(framework1Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework1BinaryTarget)
             .setDeps(ImmutableSortedSet.of(framework2Target))
             .build();
@@ -4190,7 +4199,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(framework1Target))
             .build();
@@ -4239,7 +4248,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework2Node =
         AppleBundleBuilder.createBuilder(framework2Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework2BinaryTarget)
             .setProductName(Optional.of("framework_2_override"))
             .build();
@@ -4259,7 +4268,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework1Node =
         AppleBundleBuilder.createBuilder(framework1Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework1BinaryTarget)
             .setDeps(ImmutableSortedSet.of(framework2Target))
             .build();
@@ -4275,7 +4284,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework1FlavoredNode =
         AppleBundleBuilder.createBuilder(framework1FlavoredTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework1BinaryTarget)
             .setDeps(ImmutableSortedSet.of(framework2Target))
             .build();
@@ -4289,7 +4298,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(framework1Target, framework1FlavoredTarget))
             .build();
@@ -4350,11 +4359,11 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> frameworkNode =
         AppleBundleBuilder.createBuilder(frameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(frameworkBinaryTarget)
             .build();
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "res");
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(frameworkTarget);
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(frameworkTarget);
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
             .setFiles(ImmutableSet.of())
@@ -4374,24 +4383,21 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(binaryTarget)
             .build();
     ImmutableSet<TargetNode<?, ?>> nodes =
         ImmutableSet.of(frameworkBinaryNode, frameworkNode, resourceNode, binaryNode, bundleNode);
     final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(nodes));
     BuildRuleResolver resolver =
-        new BuildRuleResolver(targetGraph, new DefaultTargetNodeToBuildRuleTransformer());
+        new SingleThreadedBuildRuleResolver(
+            targetGraph, new DefaultTargetNodeToBuildRuleTransformer());
     ProjectGenerator projectGenerator =
         createProjectGeneratorForCombinedProject(
             nodes,
             ImmutableSet.of(),
             input -> {
-              try {
-                resolver.requireRule(input.getBuildTarget());
-              } catch (NoSuchBuildTargetException e) {
-                throw new RuntimeException(e);
-              }
+              resolver.requireRule(input.getBuildTarget());
               return resolver;
             });
     projectGenerator.createXcodeProjects();
@@ -4412,7 +4418,7 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(ImmutableSortedSet.of())
-            .setBridgingHeader(Optional.of(new FakeSourcePath("BridgingHeader/header1.h")))
+            .setBridgingHeader(Optional.of(FakeSourcePath.of("BridgingHeader/header1.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -4479,6 +4485,162 @@ public class ProjectGeneratorTest {
   }
 
   @Test
+  public void testGeneratedProjectSettingForSwiftBuildSettingsForAppleLibrary() throws IOException {
+    BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//Foo", "Bar");
+    TargetNode<?, ?> node =
+        AppleLibraryBuilder.createBuilder(buildTarget)
+            .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
+            .setSwiftVersion(Optional.of("3.0"))
+            .build();
+
+    ProjectGenerator projectGenerator =
+        createProjectGeneratorForCombinedProject(ImmutableSet.of(node));
+    projectGenerator.createXcodeProjects();
+    PBXProject project = projectGenerator.getGeneratedProject();
+
+    PBXTarget target = assertTargetExistsAndReturnTarget(project, "//Foo:Bar");
+    ImmutableMap<String, String> buildSettings = getBuildSettings(buildTarget, target, "Debug");
+
+    assertThat(buildSettings.get("SWIFT_OBJC_INTERFACE_HEADER_NAME"), equalTo("Bar-Swift.h"));
+    assertNotNull(
+        "Location of Generated Obj-C Header must be known in advance",
+        buildSettings.get("DERIVED_FILE_DIR"));
+    assertThat(
+        buildSettings.get("SWIFT_INCLUDE_PATHS"), equalTo("$(inherited) $BUILT_PRODUCTS_DIR"));
+  }
+
+  @Test
+  public void testGeneratedProjectForAppleBinaryUsingAppleLibraryWithSwiftSources()
+      throws IOException {
+    BuildTarget libBuildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
+    TargetNode<?, ?> libNode =
+        AppleLibraryBuilder.createBuilder(libBuildTarget)
+            .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
+            .setSwiftVersion(Optional.of("3.0"))
+            .build();
+
+    BuildTarget binBuildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "bin");
+    TargetNode<?, ?> binNode =
+        AppleBinaryBuilder.createBuilder(binBuildTarget)
+            .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
+            .setDeps(ImmutableSortedSet.of(libBuildTarget))
+            .build();
+
+    ProjectGenerator projectGenerator =
+        createProjectGeneratorForCombinedProject(ImmutableSet.of(libNode, binNode));
+    projectGenerator.createXcodeProjects();
+    PBXProject project = projectGenerator.getGeneratedProject();
+
+    PBXTarget target = assertTargetExistsAndReturnTarget(project, "//foo:bin");
+    ImmutableMap<String, String> buildSettings = getBuildSettings(binBuildTarget, target, "Debug");
+    assertThat(
+        buildSettings.get("LIBRARY_SEARCH_PATHS"),
+        containsString("$DT_TOOLCHAIN_DIR/usr/lib/swift/$PLATFORM_NAME"));
+    assertThat(
+        buildSettings.get("LD_RUNPATH_SEARCH_PATHS[sdk=iphoneos*]"),
+        equalTo("$(inherited) @executable_path/Frameworks @loader_path/Frameworks"));
+    assertThat(
+        buildSettings.get("LD_RUNPATH_SEARCH_PATHS[sdk=iphonesimulator*]"),
+        equalTo("$(inherited) @executable_path/Frameworks @loader_path/Frameworks"));
+    assertThat(
+        buildSettings.get("LD_RUNPATH_SEARCH_PATHS[sdk=macosx*]"),
+        equalTo("$(inherited) @executable_path/../Frameworks @loader_path/../Frameworks"));
+  }
+
+  @Test
+  public void testSwiftObjCGenerateHeaderInHeaderMap() throws IOException {
+    BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
+    TargetNode<?, ?> node =
+        AppleLibraryBuilder.createBuilder(buildTarget)
+            .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
+            .setSwiftVersion(Optional.of("3.0"))
+            .setXcodePublicHeadersSymlinks(false)
+            .setXcodePrivateHeadersSymlinks(false)
+            .build();
+
+    ImmutableSet.Builder<ProjectGenerator.Option> optionsBuilder = ImmutableSet.builder();
+    ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions = optionsBuilder.build();
+    ProjectGenerator projectGenerator =
+        createProjectGeneratorForCombinedProject(ImmutableSet.of(node), projectGeneratorOptions);
+
+    projectGenerator.createXcodeProjects();
+
+    List<Path> headerSymlinkTrees = projectGenerator.getGeneratedHeaderSymlinkTrees();
+    assertThat(headerSymlinkTrees, hasSize(2));
+
+    String publicHeaderMapDir = "buck-out/gen/_p/CwkbTNOBmb-pub";
+    assertThat(headerSymlinkTrees.get(0).toString(), is(equalTo(publicHeaderMapDir)));
+
+    HeaderMap headerMap = getHeaderMapInDir(Paths.get(publicHeaderMapDir));
+    assertThat(headerMap.getNumEntries(), equalTo(1));
+
+    String objCGeneratedHeaderName = "lib-Swift.h";
+    String derivedSourcesUserDir =
+        "buck-out/xcode/derived-sources/lib-0b091b4cd38199b85fed37557a12c08fbbca9b32";
+    String objCGeneratedHeaderPathName = headerMap.lookup("lib/lib-Swift.h");
+    assertTrue(
+        objCGeneratedHeaderPathName.endsWith(
+            derivedSourcesUserDir + "/" + objCGeneratedHeaderName));
+
+    PBXProject pbxProject = projectGenerator.getGeneratedProject();
+    PBXTarget pbxTarget = assertTargetExistsAndReturnTarget(pbxProject, "//foo:lib");
+    ImmutableMap<String, String> buildSettings = getBuildSettings(buildTarget, pbxTarget, "Debug");
+
+    assertThat(buildSettings.get("DERIVED_FILE_DIR"), equalTo("../" + derivedSourcesUserDir));
+    assertThat(
+        buildSettings.get("SWIFT_OBJC_INTERFACE_HEADER_NAME"), equalTo(objCGeneratedHeaderName));
+  }
+
+  @Test
+  public void testSwiftDependencyBuildPhase() throws IOException {
+    BuildTarget fooBuildTarget = BuildTargetFactory.newInstance(rootPath, "//baz", "foo");
+    BuildTarget barBuildTarget = BuildTargetFactory.newInstance(rootPath, "//baz", "bar");
+
+    TargetNode<?, ?> fooNode =
+        AppleLibraryBuilder.createBuilder(fooBuildTarget)
+            .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
+            .setSwiftVersion(Optional.of("3.0"))
+            .setXcodePublicHeadersSymlinks(false)
+            .setXcodePrivateHeadersSymlinks(false)
+            .build();
+    TargetNode<?, ?> barNode =
+        AppleLibraryBuilder.createBuilder(barBuildTarget)
+            .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Bar.swift"))))
+            .setDeps(ImmutableSortedSet.of(fooBuildTarget))
+            .setSwiftVersion(Optional.of("3.0"))
+            .setXcodePublicHeadersSymlinks(false)
+            .setXcodePrivateHeadersSymlinks(false)
+            .build();
+
+    ImmutableSet.Builder<ProjectGenerator.Option> optionsBuilder = ImmutableSet.builder();
+    ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions = optionsBuilder.build();
+    ProjectGenerator projectGenerator =
+        createProjectGeneratorForCombinedProject(
+            ImmutableSet.of(fooNode, barNode), projectGeneratorOptions);
+
+    projectGenerator.createXcodeProjects();
+
+    PBXProject pbxProject = projectGenerator.getGeneratedProject();
+    PBXTarget pbxTarget = assertTargetExistsAndReturnTarget(pbxProject, "//baz:bar");
+
+    ImmutableSet<PBXBuildPhase> fakeDepPhases =
+        FluentIterable.from(pbxTarget.getBuildPhases())
+            .filter(
+                phase -> {
+                  return phase
+                      .getName()
+                      .equals(Optional.of("Fake Swift Dependencies (Copy Files Phase)"));
+                })
+            .toSet();
+    assertThat(fakeDepPhases.size(), equalTo(1));
+  }
+
+  @Test
   public void testMergedHeaderMap() throws IOException {
     BuildTarget lib1Target = BuildTargetFactory.newInstance(rootPath, "//foo", "lib1");
     BuildTarget lib2Target = BuildTargetFactory.newInstance(rootPath, "//bar", "lib2");
@@ -4489,7 +4651,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> lib1Node =
         AppleLibraryBuilder.createBuilder(lib1Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib1.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib1.h")))
             .setDeps(ImmutableSortedSet.of(lib2Target))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
@@ -4497,37 +4659,39 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> lib2Node =
         AppleLibraryBuilder.createBuilder(lib2Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib2.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib2.h")))
             .build();
 
     TargetNode<?, ?> lib3Node =
         AppleLibraryBuilder.createBuilder(lib3Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib3.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib3.h")))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(lib1Target, lib4Target))
             .build();
 
     TargetNode<?, ?> lib4Node =
         AppleLibraryBuilder.createBuilder(lib4Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib4.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib4.h")))
             .build();
 
     final TargetGraph targetGraph =
         TargetGraphFactory.newInstance(
             ImmutableSet.of(lib1Node, lib2Node, lib3Node, testNode, lib4Node));
     final AppleDependenciesCache cache = new AppleDependenciesCache(targetGraph);
+    final ProjectGenerationStateCache projStateCache = new ProjectGenerationStateCache();
 
     ProjectGenerator projectGeneratorLib2 =
         new ProjectGenerator(
             targetGraph,
             cache,
+            projStateCache,
             ImmutableSet.of(lib2Target),
             projectCell,
             OUTPUT_DIRECTORY,
@@ -4570,6 +4734,7 @@ public class ProjectGeneratorTest {
         new ProjectGenerator(
             targetGraph,
             cache,
+            projStateCache,
             ImmutableSet.of(lib1Target, testTarget), /* lib3Target not included on purpose */
             projectCell,
             OUTPUT_DIRECTORY,
@@ -4636,30 +4801,56 @@ public class ProjectGeneratorTest {
   }
 
   private ProjectGenerator createProjectGeneratorForCombinedProject(
-      Collection<TargetNode<?, ?>> nodes) {
-    return createProjectGeneratorForCombinedProject(nodes, ImmutableSet.of());
+      Collection<TargetNode<?, ?>> allNodes) {
+    return createProjectGeneratorForCombinedProject(allNodes, allNodes, ImmutableSet.of());
   }
 
   private ProjectGenerator createProjectGeneratorForCombinedProject(
-      Collection<TargetNode<?, ?>> nodes,
+      Collection<TargetNode<?, ?>> allNodes,
+      Collection<TargetNode<?, ?>> initialTargetNodes,
       ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions) {
-    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(nodes));
+    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(allNodes));
     return createProjectGeneratorForCombinedProject(
-        nodes, projectGeneratorOptions, getBuildRuleResolverNodeFunction(targetGraph));
+        allNodes,
+        initialTargetNodes,
+        projectGeneratorOptions,
+        getBuildRuleResolverNodeFunction(targetGraph));
   }
 
   private ProjectGenerator createProjectGeneratorForCombinedProject(
-      Collection<TargetNode<?, ?>> nodes,
+      Collection<TargetNode<?, ?>> allNodes,
+      ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions) {
+    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(allNodes));
+    return createProjectGeneratorForCombinedProject(
+        allNodes, allNodes, projectGeneratorOptions, getBuildRuleResolverNodeFunction(targetGraph));
+  }
+
+  private ProjectGenerator createProjectGeneratorForCombinedProject(
+      Collection<TargetNode<?, ?>> allNodes,
+      ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions,
+      Function<? super TargetNode<?, ?>, BuildRuleResolver> buildRuleResolverForNode) {
+    return createProjectGeneratorForCombinedProject(
+        allNodes, allNodes, projectGeneratorOptions, buildRuleResolverForNode);
+  }
+
+  private ProjectGenerator createProjectGeneratorForCombinedProject(
+      Collection<TargetNode<?, ?>> allNodes,
+      Collection<TargetNode<?, ?>> initialTargetNodes,
       ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions,
       Function<? super TargetNode<?, ?>, BuildRuleResolver> buildRuleResolverForNode) {
     ImmutableSet<BuildTarget> initialBuildTargets =
-        nodes.stream().map(TargetNode::getBuildTarget).collect(MoreCollectors.toImmutableSet());
+        initialTargetNodes
+            .stream()
+            .map(TargetNode::getBuildTarget)
+            .collect(MoreCollectors.toImmutableSet());
 
-    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(nodes));
+    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(allNodes));
     final AppleDependenciesCache cache = new AppleDependenciesCache(targetGraph);
+    final ProjectGenerationStateCache projStateCache = new ProjectGenerationStateCache();
     return new ProjectGenerator(
         targetGraph,
         cache,
+        projStateCache,
         initialBuildTargets,
         projectCell,
         OUTPUT_DIRECTORY,
@@ -4681,7 +4872,8 @@ public class ProjectGeneratorTest {
   private Function<TargetNode<?, ?>, BuildRuleResolver> getBuildRuleResolverNodeFunction(
       final TargetGraph targetGraph) {
     BuildRuleResolver resolver =
-        new BuildRuleResolver(targetGraph, new DefaultTargetNodeToBuildRuleTransformer());
+        new SingleThreadedBuildRuleResolver(
+            targetGraph, new DefaultTargetNodeToBuildRuleTransformer());
     AbstractBottomUpTraversal<TargetNode<?, ?>, RuntimeException> bottomUpTraversal =
         new AbstractBottomUpTraversal<TargetNode<?, ?>, RuntimeException>(targetGraph) {
           @Override
