@@ -31,23 +31,28 @@ import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assume.assumeTrue;
 
-import com.facebook.buck.cli.BuckConfig;
-import com.facebook.buck.cli.FakeBuckConfig;
-import com.facebook.buck.config.ConfigBuilder;
+import com.facebook.buck.apple.AppleNativeIntegrationTestUtils;
+import com.facebook.buck.apple.ApplePlatform;
+import com.facebook.buck.config.ActionGraphParallelizationMode;
+import com.facebook.buck.config.BuckConfig;
+import com.facebook.buck.config.FakeBuckConfig;
 import com.facebook.buck.event.BuckEventBus;
 import com.facebook.buck.event.BuckEventBusForTests;
 import com.facebook.buck.event.FakeBuckEventListener;
 import com.facebook.buck.event.listener.BroadcastEventListener;
-import com.facebook.buck.io.MorePaths;
-import com.facebook.buck.io.ProjectFilesystem;
-import com.facebook.buck.json.BuildFileParseException;
-import com.facebook.buck.json.ParseBuckFileEvent;
+import com.facebook.buck.io.WatchmanOverflowEvent;
+import com.facebook.buck.io.WatchmanPathEvent;
+import com.facebook.buck.io.file.MorePaths;
+import com.facebook.buck.io.filesystem.ProjectFilesystem;
+import com.facebook.buck.io.filesystem.TestProjectFilesystems;
 import com.facebook.buck.jvm.java.JavaLibrary;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetException;
 import com.facebook.buck.model.BuildTargetFactory;
 import com.facebook.buck.model.InternalFlavor;
 import com.facebook.buck.model.UnflavoredBuildTarget;
+import com.facebook.buck.parser.events.ParseBuckFileEvent;
+import com.facebook.buck.parser.exceptions.BuildFileParseException;
 import com.facebook.buck.parser.thrift.RemoteDaemonicCellState;
 import com.facebook.buck.parser.thrift.RemoteDaemonicParserState;
 import com.facebook.buck.rules.ActionGraphCache;
@@ -66,8 +71,7 @@ import com.facebook.buck.testutil.integration.TemporaryPaths;
 import com.facebook.buck.testutil.integration.TestDataHelper;
 import com.facebook.buck.util.HumanReadableException;
 import com.facebook.buck.util.MoreCollectors;
-import com.facebook.buck.util.WatchmanOverflowEvent;
-import com.facebook.buck.util.WatchmanPathEvent;
+import com.facebook.buck.util.config.ConfigBuilder;
 import com.facebook.buck.util.environment.Platform;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Joiner;
@@ -198,7 +202,8 @@ public class ParserTest {
     // Create a temp directory with some build files.
     Path root = tempDir.getRoot().toRealPath();
     filesystem =
-        new ProjectFilesystem(root, ConfigBuilder.createFromText("[project]", "ignore = **/*.swp"));
+        TestProjectFilesystems.createProjectFilesystem(
+            root, ConfigBuilder.createFromText("[project]", "ignore = **/*.swp"));
     cellRoot = filesystem.getRootPath();
     eventBus = BuckEventBusForTests.newInstance();
 
@@ -477,8 +482,7 @@ public class ParserTest {
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
-        "Target //java/com/facebook:baz (type genrule) does not currently support flavors "
-            + "(tried [src])");
+        "The following flavor(s) are not supported on target //java/com/facebook:baz:\n" + "src.");
     parser.buildTargetGraph(
         eventBus, cell, false, executorService, ImmutableSortedSet.of(flavored));
   }
@@ -1110,7 +1114,7 @@ public class ParserTest {
 
     Path newTempDir = Files.createTempDirectory("junit-temp-path").toRealPath();
     Files.createFile(newTempDir.resolve("bar.py"));
-    ProjectFilesystem newFilesystem = new ProjectFilesystem(newTempDir);
+    ProjectFilesystem newFilesystem = TestProjectFilesystems.createProjectFilesystem(newTempDir);
     BuckConfig config =
         FakeBuckConfig.builder()
             .setFilesystem(newFilesystem)
@@ -1412,7 +1416,7 @@ public class ParserTest {
 
       JavaLibrary libRule = (JavaLibrary) resolver.requireRule(libTarget);
       assertEquals(
-          ImmutableSortedSet.of(new PathSourcePath(filesystem, Paths.get("foo/bar/Bar.java"))),
+          ImmutableSortedSet.of(PathSourcePath.of(filesystem, Paths.get("foo/bar/Bar.java"))),
           libRule.getJavaSrcs());
     }
 
@@ -1430,8 +1434,8 @@ public class ParserTest {
       JavaLibrary libRule = (JavaLibrary) resolver.requireRule(libTarget);
       assertEquals(
           ImmutableSet.of(
-              new PathSourcePath(filesystem, Paths.get("foo/bar/Bar.java")),
-              new PathSourcePath(filesystem, Paths.get("foo/bar/Baz.java"))),
+              PathSourcePath.of(filesystem, Paths.get("foo/bar/Bar.java")),
+              PathSourcePath.of(filesystem, Paths.get("foo/bar/Baz.java"))),
           libRule.getJavaSrcs());
     }
   }
@@ -1466,8 +1470,8 @@ public class ParserTest {
 
       assertEquals(
           ImmutableSortedSet.of(
-              new PathSourcePath(filesystem, Paths.get("foo/bar/Bar.java")),
-              new PathSourcePath(filesystem, Paths.get("foo/bar/Baz.java"))),
+              PathSourcePath.of(filesystem, Paths.get("foo/bar/Bar.java")),
+              PathSourcePath.of(filesystem, Paths.get("foo/bar/Baz.java"))),
           libRule.getJavaSrcs());
     }
 
@@ -1484,7 +1488,7 @@ public class ParserTest {
 
       JavaLibrary libRule = (JavaLibrary) resolver.requireRule(libTarget);
       assertEquals(
-          ImmutableSortedSet.of(new PathSourcePath(filesystem, Paths.get("foo/bar/Bar.java"))),
+          ImmutableSortedSet.of(PathSourcePath.of(filesystem, Paths.get("foo/bar/Bar.java"))),
           libRule.getJavaSrcs());
     }
   }
@@ -1782,6 +1786,7 @@ public class ParserTest {
   public void defaultFlavorsInRuleArgsAppliedToTarget() throws Exception {
     // We depend on Xcode platforms for this test.
     assumeTrue(Platform.detect() == Platform.MACOS);
+    assumeTrue(AppleNativeIntegrationTestUtils.isApplePlatformAvailable(ApplePlatform.MACOSX));
 
     Path buckFile = cellRoot.resolve("lib/BUCK");
     Files.createDirectories(buckFile.getParent());
@@ -1822,6 +1827,7 @@ public class ParserTest {
   public void defaultFlavorsInConfigAppliedToTarget() throws Exception {
     // We depend on Xcode platforms for this test.
     assumeTrue(Platform.detect() == Platform.MACOS);
+    assumeTrue(AppleNativeIntegrationTestUtils.isApplePlatformAvailable(ApplePlatform.MACOSX));
 
     Path buckFile = cellRoot.resolve("lib/BUCK");
     Files.createDirectories(buckFile.getParent());
@@ -2182,8 +2188,33 @@ public class ParserTest {
     assertEquals("Should not have invalidated.", 1, counter.calls);
   }
 
+  @Test
+  public void testSkylarkSyntaxParsing() throws Exception {
+    Path buckFile = cellRoot.resolve("BUCK");
+    Files.write(
+        buckFile,
+        Joiner.on("\n")
+            .join(
+                ImmutableList.of(
+                    "# BUILD FILE SYNTAX: SKYLARK",
+                    "genrule(name = 'cake', out = 'file.txt', cmd = 'touch $OUT')"))
+            .getBytes(UTF_8));
+
+    BuckConfig config =
+        FakeBuckConfig.builder()
+            .setFilesystem(filesystem)
+            .setSections("[parser]", "polyglot_parsing_enabled=true")
+            .build();
+
+    Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
+
+    parser.getAllTargetNodes(eventBus, cell, false, executorService, buckFile);
+  }
+
   private BuildRuleResolver buildActionGraph(BuckEventBus eventBus, TargetGraph targetGraph) {
-    return Preconditions.checkNotNull(ActionGraphCache.getFreshActionGraph(eventBus, targetGraph))
+    return Preconditions.checkNotNull(
+            ActionGraphCache.getFreshActionGraph(
+                eventBus, targetGraph, ActionGraphParallelizationMode.DISABLED))
         .getResolver();
   }
 
