@@ -21,7 +21,6 @@ import static org.junit.Assert.fail;
 
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.facebook.buck.util.HumanReadableException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -34,13 +33,14 @@ public class BuildTargetSourcePathTest {
   @Test
   public void shouldThrowAnExceptionIfRuleDoesNotHaveAnOutput() {
     BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+        new SingleThreadedBuildRuleResolver(
+            TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
     FakeBuildRule rule = new FakeBuildRule(target);
     rule.setOutputFile(null);
     resolver.addToIndex(rule);
-    DefaultBuildTargetSourcePath path = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    DefaultBuildTargetSourcePath path = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     try {
       pathResolver.getRelativePath(path);
@@ -53,19 +53,20 @@ public class BuildTargetSourcePathTest {
   @Test
   public void mustUseProjectFilesystemToResolvePathToFile() {
     BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+        new SingleThreadedBuildRuleResolver(
+            TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
     BuildRule rule =
         new FakeBuildRule(target) {
           @Override
           public SourcePath getSourcePathToOutput() {
-            return new ExplicitBuildTargetSourcePath(getBuildTarget(), Paths.get("cheese"));
+            return ExplicitBuildTargetSourcePath.of(getBuildTarget(), Paths.get("cheese"));
           }
         };
     resolver.addToIndex(rule);
 
-    DefaultBuildTargetSourcePath path = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    DefaultBuildTargetSourcePath path = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     Path resolved = pathResolver.getRelativePath(path);
 
@@ -75,7 +76,7 @@ public class BuildTargetSourcePathTest {
   @Test
   public void shouldReturnTheBuildTarget() {
     BuildTarget target = BuildTargetFactory.newInstance("//foo/bar:baz");
-    DefaultBuildTargetSourcePath path = new DefaultBuildTargetSourcePath(target);
+    DefaultBuildTargetSourcePath path = DefaultBuildTargetSourcePath.of(target);
 
     assertEquals(target, path.getTarget());
   }
@@ -85,13 +86,13 @@ public class BuildTargetSourcePathTest {
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(
             new SourcePathRuleFinder(
-                new BuildRuleResolver(
+                new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     BuildTarget target = BuildTargetFactory.newInstance("//foo/bar:baz");
     FakeBuildRule rule = new FakeBuildRule(target);
     Path path = Paths.get("blah");
     ExplicitBuildTargetSourcePath buildTargetSourcePath =
-        new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), path);
+        ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), path);
     assertEquals(target, buildTargetSourcePath.getTarget());
     assertEquals(path, pathResolver.getRelativePath(buildTargetSourcePath));
   }
@@ -101,16 +102,16 @@ public class BuildTargetSourcePathTest {
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(
             new SourcePathRuleFinder(
-                new BuildRuleResolver(
+                new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     FakeBuildRule rule1 = new FakeBuildRule(BuildTargetFactory.newInstance("//foo/bar:baz"));
     FakeBuildRule rule2 = new FakeBuildRule(BuildTargetFactory.newInstance("//foo/bar:waz"));
     Path path = Paths.get("blah");
 
     ExplicitBuildTargetSourcePath sourcePath1 =
-        new ExplicitBuildTargetSourcePath(rule1.getBuildTarget(), path);
+        ExplicitBuildTargetSourcePath.of(rule1.getBuildTarget(), path);
     ForwardingBuildTargetSourcePath sourcePath2 =
-        new ForwardingBuildTargetSourcePath(rule2.getBuildTarget(), sourcePath1);
+        ForwardingBuildTargetSourcePath.of(rule2.getBuildTarget(), sourcePath1);
 
     assertEquals(path, pathResolver.getRelativePath(sourcePath1));
     assertEquals(path, pathResolver.getRelativePath(sourcePath2));
@@ -119,7 +120,8 @@ public class BuildTargetSourcePathTest {
   @Test
   public void explicitlySetSourcePathImplicitTarget() {
     BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+        new SingleThreadedBuildRuleResolver(
+            TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
     FakeBuildRule rule1 = new FakeBuildRule(BuildTargetFactory.newInstance("//foo/bar:baz"));
@@ -130,9 +132,9 @@ public class BuildTargetSourcePathTest {
     resolver.addToIndex(rule2);
 
     DefaultBuildTargetSourcePath sourcePath1 =
-        new DefaultBuildTargetSourcePath(rule1.getBuildTarget());
+        DefaultBuildTargetSourcePath.of(rule1.getBuildTarget());
     ForwardingBuildTargetSourcePath sourcePath2 =
-        new ForwardingBuildTargetSourcePath(rule2.getBuildTarget(), sourcePath1);
+        ForwardingBuildTargetSourcePath.of(rule2.getBuildTarget(), sourcePath1);
 
     assertEquals(path, pathResolver.getRelativePath(sourcePath1));
     assertEquals(path, pathResolver.getRelativePath(sourcePath2));
@@ -141,7 +143,8 @@ public class BuildTargetSourcePathTest {
   @Test
   public void explicitlySetSourcePathChainsToPathSourcePath() {
     BuildRuleResolver resolver =
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+        new SingleThreadedBuildRuleResolver(
+            TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
     FakeBuildRule rule1 = new FakeBuildRule(BuildTargetFactory.newInstance("//foo/bar:rule1"));
@@ -151,11 +154,11 @@ public class BuildTargetSourcePathTest {
     FakeBuildRule rule3 = new FakeBuildRule(BuildTargetFactory.newInstance("//foo/bar:rule3"));
     resolver.addToIndex(rule3);
 
-    PathSourcePath sourcePath0 = new PathSourcePath(new FakeProjectFilesystem(), Paths.get("boom"));
+    PathSourcePath sourcePath0 = FakeSourcePath.of("boom");
     ForwardingBuildTargetSourcePath sourcePath1 =
-        new ForwardingBuildTargetSourcePath(rule1.getBuildTarget(), sourcePath0);
+        ForwardingBuildTargetSourcePath.of(rule1.getBuildTarget(), sourcePath0);
     ForwardingBuildTargetSourcePath sourcePath2 =
-        new ForwardingBuildTargetSourcePath(rule2.getBuildTarget(), sourcePath1);
+        ForwardingBuildTargetSourcePath.of(rule2.getBuildTarget(), sourcePath1);
 
     assertEquals(
         pathResolver.getRelativePath(sourcePath0), pathResolver.getRelativePath(sourcePath1));
@@ -168,9 +171,9 @@ public class BuildTargetSourcePathTest {
     BuildTarget target = BuildTargetFactory.newInstance("//foo/bar:baz");
     FakeBuildRule rule = new FakeBuildRule(target);
     ExplicitBuildTargetSourcePath path1 =
-        new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), Paths.get("something"));
+        ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), Paths.get("something"));
     ExplicitBuildTargetSourcePath path2 =
-        new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), Paths.get("something else"));
+        ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), Paths.get("something else"));
     assertNotEquals(path1, path2);
     assertNotEquals(path1.hashCode(), path2.hashCode());
   }
